# eMulan

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/algoritmic_tradoing_theory/Module 4_ Working with an algorithmic trading model/: OXF ALG M4U2 Bitcoin model.xlsx  Oxford Algorithmic Trading programme M4U1 Excel Model_add-in file.xla  Oxford Algorithmic Trading programme M4U1 Excel Model_primary file.xlsx
docs/recipe/: MNQ_VWAP_LVN_BigTrade_40_Recipe.md
scripts/: run_backtest.py
src/algotrading/: __init__.py  backtest.py  data.py  strategy.py
tests/: test_strategy.py
