[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "algotrading-starter"
version = "0.1.0"
description = "Starter toolkit for algorithmic trading research and simple backtests."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "yfinance>=0.2.50",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
